# acars_router

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.md  Cargo.toml  Dockerfile  Dockerfile.build_binary  Dockerfile.local  README.md  acars_router_audit.md  flake.nix  renovate.json
.github/: dependabot.yaml
.github/workflows/: cancel_dupes.yml  deploy.yml  deploy_trixie.yml  hadolint.yml  lint.yaml  markdownlint.yml  on_pr.yaml  pre-commit-updates.yaml  update-flakes.yaml  yamllint.yml
acars_router/: README.md  acars_router.py  acars_router2.py  internals.drawio  requirements.txt  viewacars  viewacars.py  viewvdlm2
rootfs/: rename_current_arch_binary.sh
rootfs/etc/s6-overlay/s6-rc.d/acars_router/: run
rootfs/etc/s6-overlay/scripts/: acars_router
rootfs/etc/services.d/acars_router/: run
rust/libraries/acars_config/: Cargo.toml
rust/libraries/acars_config/src/: lib.rs  sanity_checker.rs
rust/libraries/acars_connection_manager/: Cargo.toml
rust/libraries/acars_connection_manager/src/: cached_dns_tcp.rs  dns.rs  lib.rs  message_handler.rs  metrics_handler.rs  packet_handler.rs  service_init.rs  tcp_services.rs  udp_services.rs  zmq_services.rs
rust/libraries/acars_connection_manager/tests/fixtures/: vdlm2.jsonl
rust/libraries/acars_data_processing/: Cargo.toml
rust/libraries/acars_logging/: Cargo.toml
rust/libraries/acars_logging/src/: lib.rs
rust/libraries/acars_metrics/: Cargo.toml
rust/libraries/acars_metrics/src/: lib.rs
src/: config_options.rs  generics.rs  helper_functions.rs  listener_servers.rs  main.rs  sanity_checker.rs
src/acars_router_servers/: listener_servers.rs  sender_servers.rs
src/acars_router_servers/tcp/: tcp_listener_server.rs
src/acars_router_servers/tcp/inputs/: tcp_listener_server.rs  tcp_receiver_server.rs
src/acars_router_servers/tcp/outputs/: tcp_sender_server.rs  tcp_serve_server.rs  tcp_server.rs
src/acars_router_servers/udp/: udp_listener_server.rs  udp_sender_server.rs
src/acars_router_servers/udp/inputs/: udp_listener_server.rs
src/acars_router_servers/udp/outputs/: udp_sender_server.rs
src/acars_router_servers/zmq/: zmq_listener_server.rs  zmq_sender_server.rs
src/acars_router_servers/zmq/inputs/: zmq_listener_server.rs
src/acars_router_servers/zmq/outputs/: zmq_sender_server.rs
src/data_processing/: hasher.rs  message_handler.rs  packet_handler.rs
test_data/: acars  acars_other  clean_up_after_test.sh  data_feeder_test.py  data_feeder_test_receiver_tcp.py  data_feeder_test_sender_tcp.py  data_feeder_test_tcp.py  data_feeder_test_udp.py  data_feeder_test_zmq.py  run_acars_ruster_test.sh  send_lines.sh  test_acars_tcplisten_tcpsend.sh  test_acars_tcpreceive_tcpserve.sh  test_acars_udp.sh  test_tcplisten_tcpsend.sh  test_tcpreceive_tcpserve.sh  test_udp.sh  test_udp_zmqserver.sh  test_vdlm2_tcplisten_tcpsend.sh  test_vdlm2_udp.sh  vdlm2_other
