[workspace]
members = [
  "rust/bin/acars_router",
  "rust/libraries/acars_config",
  "rust/libraries/acars_connection_manager",
]
resolver = "2"


[workspace.package]
edition = "2021"
version = "1.3.1"
authors = ["Fred Clausen", "Mike Nye", "Alex Austin"]
description = "ACARS Router: A Utility to ingest ACARS/VDLM2/HFDL/IMSL/IRDM from many sources, process, and feed out to many consumers."
documentation = "https://github.com/sdr-enthusiasts/acars_router"
homepage = "https://github.com/sdr-enthusiasts/acars_router"
repository = "https://github.com/sdr-enthusiasts/acars_router"
readme = "README.md"
license = "MIT"
rust-version = "1.66.1"

[workspace.dependencies]
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sdre-rust-logging = "0.3.19"
clap = { version = "4.5.40", features = ["derive", "env"] }
sdre-stubborn-io = "0.6.9"
tokio-util = { version = "0.7.15", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
async-trait = "0.1.88"
zmq = "0.10.0"
tmq = "0.5.0"
acars_vdlm2_parser = { git = "https://github.com/jcdeimos/acars_vdlm2_parser", version = "0.4.0" }
#acars_vdlm2_parser = { git = "https://github.com/fredclausen/acars_vdlm2_parser", branch = "hfdl-and-dependency-updates" }
acars_config = { path = "../acars_config" }
#acars_vdlm2_parser = { git = "https://github.com/rpatel3001/acars_vdlm2_parser", branch = "add_imsl_irdm" }
