[package]
name = "acars_connection_manager"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acars_vdlm2_parser.workspace = true
acars_config = { path = "../acars_config" }
sdre-stubborn-io.workspace = true
#sdre-stubborn-io = "0.4.4"
log.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
zmq.workspace = true
tmq.workspace = true
#acars_vdlm2_parser = { git = "https://github.com/jcdeimos/acars_vdlm2_parser", version = "0.2.1" }
#acars_vdlm2_parser = { git = "https://github.com/fredclausen/acars_vdlm2_parser", branch = "hfdl-and-dependency-updates" }
