[package]
name = "acars_connection_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acars_vdlm2_parser.workspace = true
acars_config = { path = "../acars_config" }
sdre-stubborn-io.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
zmq.workspace = true
tmq.workspace = true
socket2.workspace = true
hickory-resolver.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
