[package]
name = "acars_metrics"
version.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.13.2", features = [ "process" ]}
prometheus-static-metric = "0.5.1"
lazy_static = "1.4.0"
prometheus_exporter = "0.8.5"
log = "0.4.17"
acars_logging = { path = "../acars_logging" }